report tools done

--- a/Join_GroupBy/report/HJGreport.tex
+++ b/Join_GroupBy/report/HJGreport.tex
@@ -17,7 +17,7 @@
 \title{Προχωρημένα Θέματα Βάσεων Δεδομένων}
 \author{Αλέξανδρος Δημήτριος Κέρος\\
 	A.M.2008030109\\
-	\foreignlanguage{english} {LAB40624686}}
+	\en{LAB40624686}}
 \date{}
 \maketitle
 
@@ -31,15 +31,50 @@
 
 Σκοπός της παρούσας εργασίας είναι η υλοποίηση των τελεστών \emph{\en{Hash-Join}} και \emph{\en{Group-By (Count)}} επί του κατανεμημένου συστήματος αποθήκευσης και επεξεργασίας μεγάλου όγκου δεδομένων \emph{\en{Hadoop}}, τηρώντας το προγραμματιστικό μοντέλο \emph{\en{MapReduce}} για την επεξεργασία δεδομένων με χρήση παράλληλων, κατανεμημένων αλγορίθμων.
 
-Η δομή της παρούσας αναφοράς είναι η ακόλουθη. Στο κεφάλαιο \ref{sec:Prelim} πραγματοποιείται συνοπτική αναφορά στο σύστημα \emph{\en{Hadoop}} και στο μοντέλο \emph{\en{MapReduce}}. Στο κεφάλαιο \ref{sec:Impl} περιγράφεται αναλυτικά η υλοποίηση των τελεστών (\emph{\en{Hadoop,GroupBy}}), καθώς και των επιπλέον λειτουργιών που ενσωματώθηκαν. Στο κεφάλαιο \ref{sec:ExpRes} αναλύεται η απόδοση των υλοποιηθέντων λειτουργειών όσον αφορά απαιτήσεις χρόνου και ορθότητας αποτελεσμάτων. Τέλος, στο κεφάλαιο \ref{sec:Eval} συνοψίζεται η παρούσα αναφορά και επισημαίνονται ορισμένες συμπερασματικές παρατηρήσεις.
+Η δομή της παρούσας αναφοράς είναι η ακόλουθη. Στο κεφάλαιο \ref{sec:Prelim} πραγματοποιείται συνοπτική αναφορά στο σύστημα \emph{\en{Hadoop}} και στο μοντέλο \emph{\en{MapReduce}}, όπως επίσης και στους αλγορίθμους \emph{\en{Hash Join}} και \emph{\en{GroupBy}}. Στο κεφάλαιο \ref{sec:Impl} περιγράφεται αναλυτικά η υλοποίηση των τελεστών (\emph{\en{HashJoin,GroupBy}}), καθώς και των επιπλέον λειτουργιών που ενσωματώθηκαν. Στο κεφάλαιο \ref{sec:ExpRes} αναλύεται η απόδοση των υλοποιηθέντων λειτουργιών όσον αφορά απαιτήσεις χρόνου και ορθότητας αποτελεσμάτων. Τέλος, στο κεφάλαιο \ref{sec:Eval} συνοψίζεται η παρούσα αναφορά και επισημαίνονται ορισμένες συμπερασματικές παρατηρήσεις.
 
 %---------------------------------------------------------
 \section{ΠΡΟΑΠΑΙΤΟΥΜΕΝΑ} \label{sec:Prelim}
 
-\subsection{\en{Hadoop}} \label{subsec:Hadoop}
+\subsection{Μοντέλο και Σύστημα λογισμικού, \en{MapReduce \& Hadoop}} \label{subsec:HadoopMapReduce}
+\subsubsection{\en{MapReduce}} \label{subsubsec:Mapreduce}
 
+\emph{\en{MapReduce}} αποκαλείται το ``προγραμματικό μοντέλο, καθώς και η σχετική υλοποίηση για την επεξεργασία και την παραγωγή μεγάλου όγκου δεδομένων'' \cite{mapred_paper}, τα οποία αναπτύχθηκαν από τους μηχανικούς \en{Jeffrey Dean} και \en{Sanjay Ghemawat} της \en{Google}. Κίνητρο αποτέλεσε η αποδοτική επεξεργασία υπερμεγέθους όγκου δεδομένων σε εύλογο χρονικό διάστημα μέσω ενός παράλληλου και κατανεμημένου αφαιρετικού πλαισίου.
 
-\subsection{\en{MapReduce}} \label{subsec:Mapreduce}
+Το αφαιρετικό πλαίσιο βασίζεται στη δημιουργία απλών μονάδων επεξεργασίας, οι οποίες δηλώνονται ως \texttt{\en{map}} και \texttt{\en{reduce}} συναρτήσεις, απαλλάσσοντας τον προγραμματιστή από τα προβλήματα που ανακύπτουν από την κατανεμημένη εκτέλεση της εργασίας. Οι συναρτήσεις αυτές αναλαμβάνουν την επεξεργασία ζευγών \emph{κλειδί-τιμή} (\emph{\en{key-value pairs}}) για την παραγωγή ενός άλλου ζεύγους  \emph{κλειδί-τιμή} (\emph{\en{key-value}}).
+
+Αναλυτικά, οι \texttt{\en{map}} συναρτήσεις αναλαμβάνουν τον μετασχηματισμό ενός αρχικού συνόλου ζευγών \emph{κλειδί-τιμή} σε ένα ενδιάμεσο ζεύγος \emph{κλειδί-τιμή}, τα οποία στη συνέχεια συνενώνονται ανά τιμή ενδιάμεσου κλειδιού και κατανέμονται στις \texttt{\en{reduce}} συναρτήσεις, οι οποίες τα επεξεργάζονται και  καταγράφουν το τελικό αποτέλεσμα (βλ. σχήμα \ref{fig:mapred-keyVals}, \ref{fig:mapred-graph} ). Προγράμματα γραμμένα κατά αυτόν τον τρόπο εκτελούνται παράλληλα από το πλαίσιο σε ένα σύνολο από υπολογιστές.
+
+\begin{figure}[H]
+\centering{\includegraphics[scale=0.6]{mrkeyval.png}
+\caption{Μετατροπή ζευγών \emph{κλειδί-τιμή}(\emph{\en{key-value}}).\label{fig:mapred-keyVals}
+}
+}
+\end{figure}
+
+\begin{figure}[H]
+\centering{\includegraphics[scale=0.35]{mrgraph.png}
+\caption{Διαδικασία προγράμματος \en{MapReduce}.\label{fig:mapred-graph}
+}
+}
+\end{figure}
+
+\subsubsection{\en{Hadoop}} \label{subsubsec:Hadoop}
+
+Το \emph{\en{Hadoop}} αποτελεί την ανοιχτού κώδικα υλοποίηση, βασισμένη σε \emph{\en{Java}}, του \emph{\en{MapReduce}} πλαισίου από το \emph{\en{Apache Software Foundation}}. Ουσιαστικά αποτελεί την συνένωση του \emph{\en{MapReduce}} πλαισίου, όπως παρουσιάζεται στη δημοσίευση \cite{mapred_paper}, με το Κατανεμημένο Σύστημα Αρχείων της \emph{\en{Google}} (\emph{\en{ Google File System [GFS]}}), όπως παρουσιάζεται στη δημοσίευση \cite{gfs_paper}, το οποίο υπό το πρόγραμμα του \emph{\en{Apache Foundation}} αποκαλείται \emph{\en{Hadoop Distributed File System [HDFS]}}. Με το σύστημα αυτό προσφέρονται λοιπόν τα κατάλληλα εργαλεία για την παράλληλη και κατανεμημένη επεξεργασία μεγάλου όγκου δεδομένων σε συστάδες υπολογιστών με αξιόπιστο και ασφαλή τρόπο, μέσω του μοντέλου \emph{\en{MapReduce}}. Η δομή του συστήματος παρουσιάζεται στο σχήμα \ref{fig:hadoop-arch}.
+
+\begin{figure}[H]
+\centering{\includegraphics[scale=0.5]{hadoopArch.png}
+\caption{Δομή συστήματος \emph{\en{Hadoop}}.\label{fig:hadoop-arch}
+}
+}
+\end{figure}
+
+\subsection{Αλγόριθμοι και Τελεστές, \en{Hash Join \& Group By}}\label{subsec:HashJoinGroupBy}
+
+\subsubsection{\en{Hash Join}}\label{subsubsec:HashJoin}
+
+\subsubsection{\en{Group By}}\label{subsubsec:GroupBy}
 
 %---------------------------------------------------------
 \section{ΥΛΟΠΟΙΗΣΗ} \label{sec:Impl}
