--- a/Join_GroupBy/report/HJGreport.tex
+++ b/Join_GroupBy/report/HJGreport.tex
@@ -298,6 +298,8 @@ name\_of\_join\_column groupBy\_columns\_comma\_separated num\_of\_machines}}\\
 
 \newpage
 \begin{appendices}
+\renewcommand\appendixtocname{Παράρτημα}
+
 \section{Εκτέλεση} \label{app:Running}
 \begin{itemize}
 \item Εκτέλεση τελεστή \emph{\en{HashJoin}}: \texttt{\en{\$HADOOP\_HOME/bin/hadoop jar MRHashJoinGroup.jar hashJoin.MRHashJoin <input path 1> <input path 2> <output path> <join column name> <num of machines>}}
